<resources>
    <string name="app_name">Movie DB client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_popular">Popular</string>
    <string name="title_activity_toprated">Top Rated</string>
    <string name="title_activity_upcoming">Upcoming</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="vote_count">Vote count</string>
    <string name="id">Id</string>
    <string name="video">Video</string>
    <string name="vote_average">Vote average</string>
    <string name="title">Title</string>
    <string name="popularity">Popularity</string>
    <string name="poster_path">Poster path</string>
    <string name="original_language">Language</string>
    <string name="original_title">Original title</string>
    <string name="genre_ids">Genre ids</string>
    <string name="backdrop_path">Backdrop path</string>
    <string name="adult">Adult</string>
    <string name="overview">Overview</string>
    <string name="release_date">Date</string>
</resources>
