<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="80dp"
                    app:srcCompat="@drawable/tyrgf01"
                    android:id="@+id/imageView2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_popular"
                    android:id="@+id/boton_popular"
                    android:drawableTop="@drawable/ic_menu_gallery"
                    android:textColor="@color/colorLetra"
                    android:background="@color/colorAccion"
                    android:paddingTop="10sp"
                    android:drawablePadding="-20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_toprated"
                    android:id="@+id/boton_top_rated"
                    android:drawableTop="@drawable/ic_menu_slideshow"
                    android:textColor="@color/colorLetra"
                    android:background="@color/colorAccion"
                    android:paddingTop="10sp"
                    android:drawablePadding="-20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_upcoming"
                    android:id="@+id/boton_upcoming"
                    android:drawableTop="@drawable/ic_menu_share"
                    android:textColor="@color/colorLetra"
                    android:background="@color/colorAccion"
                    android:paddingTop="10sp"
                    android:drawablePadding="-20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_search"
                    android:id="@+id/boton_search"
                    android:drawableTop="@drawable/ic_menu_send"
                    android:textColor="@color/colorLetra"
                    android:background="@color/colorAccion"
                    android:paddingTop="10sp"
                    android:drawablePadding="-20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>